fix horizontal overflow in input search navbar

--- a/src/assets/css/MyNavbar.css
+++ b/src/assets/css/MyNavbar.css
@@ -142,7 +142,8 @@ input:focus {
   z-index: 1000;
   top: 30px;
   max-height: 400px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   background-color: white;
 }
